[project]
name = "plan-execute-vs-react"
version = "0.1.0"
description = "Plan-and-Execute ile ReAct ajanlarının performans analizi"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    # Model, HF Router üzerinden OpenAI-uyumlu endpoint ile ChatOpenAI ile bağlanır
    # (ReAct tarafıyla aynı sağlayıcı — adil karşılaştırma).
    "langchain-openai>=0.2.0",
    # Executor'ın web_arama aracı için (ReAct tarafıyla aynı).
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plan_execute"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
markers = [
    "live: gerçek modele karşı çalışan canlı testler (HF_TOKEN gerekir)",
    "requires_llm: bir LLM sağlayıcısı (HF_TOKEN) gerektiren testler",
]
